# dicts_paths_handler

./: CHANGELOG.md  CONTRIBUTING.md  README.md  dicts_paths_handler.py  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/: __init__.py  dicts_paths_handler.py
src/dicts_paths_handler/: __init__.py  dicts_paths_handler.py  exceptions.py
tests/: entry_creation.py  entry_deletion.py
