[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dicts_paths_handler"
version = "1.0.0"
authors = [
  { name="SoloEnder", email="SoloEnder@proton.me" },
]
description = "A library that allows access to Python dictionary values ​​in a more readable way"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/SoloEnder/dicts_paths_handler"
Issues = "https://github.com/SoloEnder/dicts_paths_handler/issues"